overflow fix

--- a/style1.css
+++ b/style1.css
@@ -19,8 +19,7 @@ body{
     background-color: #0f172a;
     color:white;
     padding:20px;
-    overflow-y:auto;
-    overflow-x:hidden;
+    overflow:auto;
     background:linear-gradient(
         135deg,
         #020617 0%,
